<resources>
    <string name="app_name">Android School</string>
    <string name="hello_eltex">Hello, Eltex!</string>
    <string name="avatar">avatar</string>
    <string name="menu">menu</string>
    <string name="not_implemented">Not implemented</string>
    <string name="like">like</string>
    <string name="share">share</string>
    <string name="participate">participate</string>
    <string name="share_text"> Author: %s, content: %s</string>
    <string name="save_post">Save</string>
    <string name="new_event_menu">New Event</string>
    <string name="content">Content</string>
    <string name="new_event_description">New event</string>
    <string name="event_empty_error">Content must not be blank</string>
    <string name="delete_event">Delete event</string>
    <string name="edit_event">Edit event</string>
    <string name="edit_event_title">Edit Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="events_description">Events</string>
    <string name="posts_description">Posts</string>
    <string name="users_description">Users</string>
    <string name="new_event_label">New event</string>
    <string name="network_error">Network error</string>
    <string name="unknown_error">Unknown error\n</string>
    <string name="retry">Retry</string>
    <string name="edit_event_toolbar">Edit event</string>
    <string name="default_date">11.05.22 11:21</string>
    <string name="default_content_skeleton">Приглашаю провести уютный вечер за увлекательными играми! У нас есть несколько вариантов настолок, подходящих для любой компании.</string>
    <string name="default_author">Lydia Westervelt</string>
    <string name="default_likes_amount_skeleton">0</string>
    <string name="default_participants_amount_skeleton">0</string>
    <string name="default_published_skeleton">16.05.22 12:00</string>
    <string name="default_link_skeleton">https://m2.material.io/components/cards</string>
    <string name="default_eventType_skeleton">Offline</string>
    <string name="default_event_date_skeleton">16.05.22 12:00</string>
    <string name="remove">Remove</string>
</resources>