<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/bottomNavigationFragment">

    <fragment
        android:id="@+id/bottomNavigationFragment"
        android:name="com.eltex.androidschool.fragments.BottomNavigationFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_bottom_navigation">
        <action
            android:id="@+id/action_bottomNavigationFragment_to_newEventFragment"
            app:destination="@id/newEventFragment" />
        <action
            android:id="@+id/action_bottomNavigationFragment_to_editEventFragment"
            app:destination="@id/editEventFragment" />
    </fragment>
    <fragment
        android:id="@+id/newEventFragment"
        android:name="com.eltex.androidschool.fragments.NewEventFragment"
        android:label="@string/new_event_label"
        tools:layout="@layout/fragment_new_event" />
    <fragment
        android:id="@+id/editEventFragment"
        android:name="com.eltex.androidschool.fragments.NewEventFragment"
        android:label="@string/edit_event_toolbar"
        tools:layout="@layout/fragment_new_event" />

</navigation>